--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.MuiPaper-root-MuiDialog-paper{
+  margin: 0;
+}
